--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "concurrently": "^4.1.2",
     "config": "^3.2.2",
     "cors": "^2.8.5",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
     "jsonwebtoken": "^8.5.1",
